--- a/app/src/main/res/layout/mainactivity_layout.xml
+++ b/app/src/main/res/layout/mainactivity_layout.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:orientation="vertical"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:fitsSystemWindows="true">
 
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="0dp"
-            android:id="@+id/fragment"/>
+            android:id="@+id/fragment"
+            android:fitsSystemWindows="true"/>
 </LinearLayout>
