--- a/app/src/main/res/layout/listplayerfragment_layout.xml
+++ b/app/src/main/res/layout/listplayerfragment_layout.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" android:background="@color/color_background_main">
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:background="@color/color_background_main" android:id="@+id/constr">
 
 
     <LinearLayout android:layout_width="match_parent"
@@ -67,4 +67,14 @@
             app:layout_constraintEnd_toEndOf="parent" app:maxImageSize="40dp"/>
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:id="@+id/fab_delPlayer"
+            android:layout_margin="16dp"
+            android:src="@drawable/minus_icon"
+            android:layout_height="wrap_content"
+            app:maxImageSize="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
