--- a/app/src/main/res/layout/statfragment_layout.xml
+++ b/app/src/main/res/layout/statfragment_layout.xml
@@ -2,10 +2,9 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/color_background_main"
+        xmlns:tools="http://schemas.android.com/tools" android:background="@color/color_background_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" android:id="@+id/frame_layout">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,23 +14,18 @@
 
         <LinearLayout
                 android:layout_width="0dp"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 android:id="@+id/linearLayout2">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/constr_stat_head">
 
-            <LinearLayout android:layout_width="match_parent"
-                          android:orientation="horizontal"
-                          android:layout_gravity="top"
-                          android:layout_height="wrap_content"
-                          tools:ignore="UseCompoundDrawables" android:id="@+id/linearLayout"
-                          android:layout_marginTop="8dp"
-                          app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                          android:layout_marginEnd="8dp">
-                <ImageView android:layout_width="25dp"
+                <ImageView android:layout_width="30dp"
                            android:layout_gravity="center_vertical"
                            android:clickable="true"
                            android:id="@+id/btn_exitStat"
@@ -39,33 +33,35 @@
                            android:contentDescription="@string/list_txt_title"
                            android:src="@drawable/ic_arrow_back_black_24dp"
                            android:layout_margin="10dp"
-                           android:layout_height="25dp"/>
+                           android:layout_height="30dp"
+                           app:layout_constraintBottom_toBottomOf="parent"
+                           app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                           android:layout_marginStart="8dp"/>
 
                 <TextView android:layout_width="wrap_content"
-                          android:text="@string/stat_txt_title"
+                          tools:text="@string/stat_txt_title"
                           android:id="@+id/txt_playerName"
-                          android:layout_marginStart="10dp"
-                          android:layout_marginEnd="10dp"
+                          android:layout_marginStart="8dp"
                           style="@style/Base.TextAppearance.AppCompat.Title"
                           android:textColor="@color/white"
-                          android:gravity="center_vertical"
-                          android:layout_height="40dp"/>
+                          android:layout_height="wrap_content"
+                          app:layout_constraintStart_toEndOf="@+id/btn_exitStat"
+                          app:layout_constraintTop_toTopOf="parent"
+                          app:layout_constraintBottom_toBottomOf="parent"/>
+
                 <Spinner
-                        android:layout_width="0dp"
-                        android:layout_gravity="center_vertical"
-                        style="@style/Widget.AppCompat.Spinner.Underlined"
+                        android:layout_width="wrap_content"
                         android:spinnerMode="dialog"
                         android:layout_height="wrap_content"
-                        android:id="@+id/spinner" android:layout_weight="1" android:layout_margin="8dp"
-                        android:layout_marginTop="16dp" android:popupBackground="@color/colorPrimaryDark"
-                        android:background="@color/color_background_main"/>
+                        android:id="@+id/spinner"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/txt_playerName" android:layout_marginStart="8dp"
+                        app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"
+                        android:backgroundTint="@color/color_background_main"
+                />
 
 
-            </LinearLayout>
-
-
-
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
