--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme"  parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
+        <item name="android:colorBackground">@color/colorPrimaryDark</item>
+        <!--<item name="dropDownListViewStyle">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:colorForegroundInverse">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:popupBackground">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:actionModeBackground">@color/colorPrimary</item>-->
+        <!--<item name="android:colorControlNormal">@color/colorPrimary</item>-->
+        <!--<item name="android:colorBackgroundCacheHint">@color/colorPrimary</item>-->
+        <!--<item name="android:textColorHint">@color/colorPrimary</item>-->
+        <!--<item name="android:colorForeground">@color/colorPrimary</item>-->
+        <!--<item name="android:colorControlHighlight">@color/colorPrimary</item>-->
 
-    <!--<style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">-->
-        <!--<item name="android:popupBackground">@color/colorPrimary</item>-->
-    <!--</style>-->
 
-    <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
-        <item name="android:popupBackground">@color/colorPrimary</item>
-        <item name="android:background">@color/colorPrimary</item>
+        <!--<item name="android:floatingToolbarPopupBackgroundDrawable">@drawable/my_shape</item>-->
+        <!--<item name="android:tooltipForegroundColor">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:colorSwitchThumbNormal">@color/colorPrimary</item>-->
     </style>
 </resources>
